Starting with new Yeoman scaffol without routing

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<html np-app>
+<html>
   <head>
-    <base href="/">
     <meta charset="utf-8">
-    <title>Project</title>
-    <meta name="description" content="AngularJS project for IET">
+    <title>FountainJS</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./images/uc-davis-logo.png" />
+    <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
   </head>
 
   <body ng-app="app">
-    <ui-view></ui-view>
+    <app>Loading...</app>
   </body>
 </html>
