Able to ajax call to change data in controller to change view

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FountainJS</title>
+    <title>Awesome Angular</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
+    <link rel="icon" type="image/png" href="./app/images/uc-davis-logo.png">
   </head>
 
-  <body ng-app="app">
+  <body ng-app="app" controller="myCtrl">
     <app2>Loading...</app2>
     <app3></app3>
   </body>
