--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
   <head>
+  <!-- Angular Material requires Angular.js Libraries -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+    <!-- Angular Material Library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <meta charset="utf-8">
     <title>Awesome Angular</title>
     <meta name="description" content="">
@@ -9,7 +17,6 @@
   </head>
 
   <body ng-app="app" controller="myCtrl">
-    <app2>Loading...</app2>
-    <app3></app3>
+    <weather>Loading...</weather>
   </body>
 </html>
