--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
   <!-- Angular Material requires Angular.js Libraries -->
-   <link rel="stylesheet" href="client/bower_components/angular-material/angular-material.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-
+    <link rel="stylesheet" href="client/bower_components/angular-material/angular-material.css">
+    <script src="client/bower_components/angular/angular.js"></script>
+    <script src="client/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="client/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="client/bower_components/angular-material/angular-material.js"></script>
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     
@@ -17,17 +16,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./app/images/uc-davis-logo.png">
   </head>
-  <body ng-app="app" controller="myCtrl">
+
+  <body ng-app="app" ng-controller="AppController as vm">
     <weather>Loading...</weather>
     <p> dshajkdhsjalk</p>
     dsads
-    <script type="text/javascript">
-      angular.module('app', ['ngMaterial'])
-.config(function($mdThemingProvider) {
-  $mdThemingProvider.theme('default')
-    .dark();
-});
+    <div class="md-primary">
+      <span>dsjadaslk</span>
+    </div>
 
-    </script>
+    <div>
+      <md-button class="md-primary">I will be blue (by default)</md-button>
+    </div>
+    <md-button class="md-primary" ng-click="vm.acceptOffer(vm);"> Accept </md-button>
+    <md-button class="md-raised md-accent">
+      <span>dsa</span>
+    </md-button>
+    <article >
+      <h2> in </h2>
+      <ul ng-repeat="c in vm.customers">
+        <li>{{c.name}}</li>
+      </ul>
+    </article>
   </body>
 </html>
