--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>Awesome Angular</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./app/images/uc-davis-logo.png">
+    <link rel="icon" type="image/png" href="./app/images/xing.png">
   </head>
 
   <body ng-app="app" ng-controller="AppController as vm">
@@ -34,8 +34,7 @@
         <weather class="weather">Loading...</weather>
       </div>
     </div>
-
-
+    <credits></credits>
 <!--     <div>
       <md-button class="md-primary">I will be blue (by default)</md-button>
     </div>
