Simple Service works

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <weather class="weather">Loading...</weather>
       </div>
     </div>
+    {{vm.hex}}
     <credits></credits>
 <!--     <div>
       <md-button class="md-primary">I will be blue (by default)</md-button>
