Small cleaning and fixing aggiefeed object fields

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="./app/bootstrap/css/bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- <script src="./app/bootstrap/css/bootstrap.min.js"></script> -->
   <!-- Angular Material requires Angular.js Libraries -->
     <link rel="stylesheet" href="client/bower_components/angular-material/angular-material.css">
     <script src="client/bower_components/angular/angular.js"></script>
@@ -9,12 +12,13 @@
     <script src="client/bower_components/angular-material/angular-material.js"></script>
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-    
     <meta charset="utf-8">
-    <title>Awesome Angular</title>
+    <title>AggieWeather</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./app/images/xing.png">
+
+
   </head>
 
   <body ng-app="app" ng-controller="AppController as vm">
@@ -24,14 +28,5 @@
       </div>
     </div>
     <credits></credits>
- <!--    <md-button class="md-raised md-accent">
-      <span>dsa</span>
-    </md-button>
-    <article >
-      <h2> in </h2>
-      <ul ng-repeat="c in vm.customers">
-        <li>{{c.name}}</li>
-      </ul>
-    </article> -->
   </body>
 </html>
